# losses

./: .gitmodules  CMakeLists.txt  README.md  ctc_aligment_loss.py  patch
py/: __init__.py  best_aligment.py  cif_loss.py  ctc_kd_loss.py  ctcdecoder.py  ctcdecoder_main.py  edit_distance.py  focal_loss.py  mwer.py
py/cpp/: binding.cc
src/: best_aligment.cc  best_aligment.cu  ctc_aligment_loss.py  ctc_decoder.cc  ctc_decoder.h  ctcdecoder.cc  edit_distance.cc
src/py/: __init__.py
